Make spark-cypher fat jar qualifier more palatable

--- a/spark-cypher/build.gradle
+++ b/spark-cypher/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 }
 
 shadowJar {
-    classifier = 'cluster'
+    classifier = 'all'
 
     dependencies {
         exclude(dependency('org.scala-lang:'))
