--- a/okapi-ir/build.gradle
+++ b/okapi-ir/build.gradle
@@ -4,13 +4,9 @@ dependencies {
     compile project(':okapi-api')
 
     compile group: 'org.atnos', name: "eff".scala(), version: ver.eff
-    compile(group: 'org.neo4j', name: 'neo4j-front-end-4.0', version: ver.cypher.frontend) {
-        exclude group: 'org.scalatest', module: 'scalatest'.scala()
-        exclude group: 'org.scalacheck', module: 'scalacheck'.scala()
-    }
 
     testCompile project(':okapi-testing')
 
-    testCompile group: 'org.neo4j', name: 'neo4j-ast-4.0', version: ver.cypher.frontend, classifier: 'tests'
-    testCompile group: 'org.neo4j', name: 'neo4j-util-4.0', version: ver.cypher.frontend, classifier: 'tests'
+    testCompile group: 'org.opencypher', name: 'ast-9.0',  version: ver.cypher.frontend, classifier: 'tests'
+    testCompile group: 'org.opencypher', name: 'util-9.0', version: ver.cypher.frontend, classifier: 'tests'
 }
