Allow launching 2 neo4j databases at the same time
Co-authored-by: Sören Reichardt <soren.reichardt@neotechnology.com>

--- a/spark-cypher-testing/build.gradle
+++ b/spark-cypher-testing/build.gradle
@@ -18,5 +18,5 @@ dependencies {
 
 }
 
-tasks.test.dependsOn(":okapi-neo4j-io-testing:neo4jstart")
-tasks.test.finalizedBy(":okapi-neo4j-io-testing:neo4jstop")
+tasks.test.dependsOn(":okapi-neo4j-io-testing:neo4jStart")
+tasks.test.finalizedBy(":okapi-neo4j-io-testing:neo4jStop")
