Extract param for neo4j-harness version

--- a/build.params.gradle
+++ b/build.params.gradle
@@ -5,39 +5,39 @@ ext {
     ]
 
     ver = [
-            self        : '0.3.1-SNAPSHOT',
+            self      : '0.3.1-SNAPSHOT',
 
-            jvm         : '1.8',
+            jvm       : '1.8',
 
-            scala       : [major: '2.12',
-                           full : '2.12.8'],
+            scala     : [major: '2.12',
+                         full : '2.12.8'],
 
-            cypher      : [frontend: '9.0.20190305',
-                           tck     : '1.0.0-M13'],
+            cypher    : [frontend: '9.0.20190305',
+                         tck     : '1.0.0-M13'],
 
-            neo4j       : [main  : '4.0.0-SNAPSHOT',
-                           driver: '1.7.2'],
+            neo4j     : [driver : '1.7.2',
+                         harness: '3.4.10'],
 
-            spark       : '2.4.0',
-            hadoop      : '2.7.0',
-            fastparse   : '2.1.0',
-            upickle     : '0.7.1',
-            cats        : '1.0.1',
-            eff         : '5.0.0',
-            bctls       : '1.59',
-            netty       : '4.1.24.Final',
-            h2          : '1.4.196',
+            spark     : '2.4.0',
+            hadoop    : '2.7.0',
+            fastparse : '2.1.0',
+            upickle   : '0.7.1',
+            cats      : '1.0.1',
+            eff       : '5.0.0',
+            bctls     : '1.59',
+            netty     : '4.1.24.Final',
+            h2        : '1.4.196',
 
-            log4j       : [main : '2.11.0',
-                           scala: '11.0'],
+            log4j     : [main : '2.11.0',
+                         scala: '11.0'],
 
-            scalatest   : '3.0.5',
-            scalacheck  : '1.13.5',
-            mockito     : '1.10.19',
-            claimant    : '0.0.2',
+            scalatest : '3.0.5',
+            scalacheck: '1.13.5',
+            mockito   : '1.10.19',
+            claimant  : '0.0.2',
 
-            junit       : [main  : '4.12',
-                           runner: '1.0.2'],
+            junit     : [main  : '4.12',
+                         runner: '1.0.2'],
     ]
 
 }
