Allow the generator to be executed via a gradle task
Parameterization of the gradle task will follow

--- a/spark-cypher-tck/build.gradle
+++ b/spark-cypher-tck/build.gradle
@@ -5,3 +5,16 @@ dependencies {
     testCompile project(':okapi-tck')
     testCompile project(':spark-cypher-testing')
 }
+
+
+task debugTCKScenarios() {
+    dependsOn sourceSets.test.runtimeClasspath
+    doLast {
+        javaexec {
+            classpath =  sourceSets.test.runtimeClasspath
+            main = 'org.opencypher.spark.testing.AcceptanceTestGenerator'
+            //todo: get list via project.getProperty( ; possible extra parameter for path
+            args = ['src/test/scala/org/opencypher/spark/testing/','Distinct on null','`exists()` with dynamic property lookup'] 
+        }
+    }
+}
