--- a/spark-cypher-tck/build.gradle
+++ b/spark-cypher-tck/build.gradle
@@ -6,15 +6,17 @@ dependencies {
     testCompile project(':spark-cypher-testing')
 }
 
-
+// split scenario name with | --> debugTCKScenarios -Pscenarios = 'sc1|sc2|..'
 task debugTCKScenarios() {
+    description "generates scala-test from TCK scenarios"
+    def outPath = project.findProperty("outPath") ?: 'src/test/scala/org/opencypher/spark/testing/'
+    def scenarios = project.findProperty("scenarios") ?: ""
     dependsOn sourceSets.test.runtimeClasspath
     doLast {
         javaexec {
             classpath =  sourceSets.test.runtimeClasspath
             main = 'org.opencypher.spark.testing.AcceptanceTestGenerator'
-            //todo: get list via project.getProperty( ; possible extra parameter for path
-            args = ['src/test/scala/org/opencypher/spark/testing/','Distinct on null','`exists()` with dynamic property lookup'] 
+            args = [outPath,scenarios]
         }
     }
 }
