--- a/spark-cypher-tck/build.gradle
+++ b/spark-cypher-tck/build.gradle
@@ -16,9 +16,10 @@ dependencies {
     generatorCompile project(':spark-cypher-testing')
 }
 
-// split scenario name with | --> debugTCKScenarios -Pscenarios = 'sc1|sc2|..'
+// split scenario name / key-words with | --> debugTCKScenarios -Pscenarios = 'sc1|sc2|..'
 task debugTCKScenarios() {
     description "generates scala-test from TCK scenarios (keywords of the scenario names suffice)"
+    group 'generator' 
     def outPath = project.findProperty("outPath") ?: 'src/test/scala/org/opencypher/spark/testing/'
     def scenarios = project.findProperty("scenarios") ?: ""
     dependsOn sourceSets.generator.runtimeClasspath
