--- a/okapi-api/build.gradle
+++ b/okapi-api/build.gradle
@@ -13,6 +13,9 @@ dependencies {
         exclude group: 'com.lihaoyi', module: 'utest_2.11'
     }
     compile group: 'com.lihaoyi', name: "fastparse".scala(), version: ver.fastparse
+    //TODO: Extract version numbers
+    compile group: "org.typelevel", name: "discipline".scala(), version: "0.10.0"
+    compile group: "org.typelevel", name: "cats-laws".scala(), version: "1.1.0"
 
     testCompile group: 'org.mockito', name: 'mockito-all', version: ver.mockito
     testCompile group: 'junit', name: 'junit', version: ver.junit.main
