--- a/build.params.gradle
+++ b/build.params.gradle
@@ -22,7 +22,8 @@ ext {
             hadoop    : '2.7.0',
             fastparse : '2.1.0',
             upickle   : '0.7.1',
-            cats      : '1.0.1',
+            cats      : '1.6.0',
+            discipline: '0.11.0',
             eff       : '5.0.0',
             bctls     : '1.59',
             netty     : '4.1.24.Final',
