Add draft for binary switch based on separate module

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include(':okapi-relational')
 include(':okapi-tck')
 include(':okapi-trees')
 include(':spark-cypher')
+include(':spark-cypher-morpheus')
 include(':spark-cypher-examples')
 include(':spark-cypher-tck')
 include(':spark-cypher-testing')
