Update gradle project dirs

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,9 +9,14 @@ include(':okapi-relational')
 include(':okapi-tck')
 include(':okapi-trees')
 include(':spark-cypher')
+project(':spark-cypher').projectDir = file('morpheus-spark-cypher')
 include(':spark-cypher-examples')
+project(':spark-cypher-examples').projectDir = file('morpheus-examples')
 include(':spark-cypher-tck')
+project(':spark-cypher-tck').projectDir = file('morpheus-tck')
 include(':spark-cypher-testing')
+project(':spark-cypher-testing').projectDir = file('morpheus-testing')
 include(':spark-cypher-jmh')
+project(':spark-cypher-jmh').projectDir = file('morpheus-jmh')
 include(':graph-ddl')
 include(':documentation')
