--- a/morpheus-jmh/build.gradle
+++ b/morpheus-jmh/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'me.champeau.gradle.jmh'
 description = 'Micro benchmarks for Cypher for Apache Spark'
 
 dependencies {
-    compile project(':spark-cypher')
+    compile project(':morpheus-spark-cypher')
 
     compile(group: 'org.apache.spark', name: "spark-core".scala(), version: ver.spark) {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
