--- a/okapi-api/build.gradle
+++ b/okapi-api/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile group: 'org.typelevel', name: "cats-core".scala(), version: ver.cats
     compile(group: 'com.lihaoyi', name: "upickle".scala(), version: ver.upickle) {
         exclude group: 'com.lihaoyi', module: 'utest'.scala()
+        exclude group: 'com.lihaoyi', module: 'acyclic'.scala()
     }
     compile group: 'com.lihaoyi', name: "fastparse".scala(), version: ver.fastparse
 
