Add shaded module for okapi-relational including relocation

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include(':okapi-neo4j-io-testing')
 include(':okapi-ir')
 include(':okapi-logical')
 include(':okapi-relational')
+include(':okapi-relational-shade')
 include(':okapi-tck')
 include(':okapi-trees')
 include(':morpheus-spark-cypher')
