--- a/settings.gradle
+++ b/settings.gradle
@@ -6,9 +6,9 @@ include(':okapi-neo4j-io-testing')
 include(':okapi-ir')
 include(':okapi-logical')
 include(':okapi-relational')
-include(':okapi-relational-shade')
 include(':okapi-tck')
 include(':okapi-trees')
+include(':okapi-shade')
 include(':morpheus-spark-cypher')
 include(':morpheus-examples')
 include(':morpheus-tck')
