--- a/okapi-shade/build.gradle
+++ b/okapi-shade/build.gradle
@@ -30,6 +30,8 @@ shadowJar {
     }
     exclude "META-INF/versions/**/*"
     exclude "META-INF/services/**/*"
+    exclude "META-INF/NOTICE"
+    exclude "META-INF/LICENSE"
     exclude "utf8.json"
 }
 
