--- a/build.publishing.gradle
+++ b/build.publishing.gradle
@@ -66,6 +66,19 @@ subprojects {
                             .findAll { it.enabled }
                 }
             }
+
+            // This publication is added only to get a `generatePomFileForJarPublication` task.
+            // We use that task to generate a pom.xml to be consumed by the Jar task.
+            // Without the pom.xml file our regular Jars, dependency resolution breaks when we shade them.
+            jar(MavenPublication) {
+                from components.java
+            }
+        }
+    }
+
+    jar {
+        from generatePomFileForJarPublication {
+            rename('pom-default.xml',"META-INF/maven/${project.group}/${project.name}/pom.xml")
         }
     }
 
