--- a/okapi-shade/build.gradle
+++ b/okapi-shade/build.gradle
@@ -6,8 +6,41 @@ dependencies {
     compile project(':okapi-relational')
 }
 
+ext.excludedDependencyGroups = [
+    'org.scala-lang',
+    'org.scala-lang.modules',
+]
+
+pub.each { k, v ->
+    v.artifacts = []
+}
+
+publishing {
+    publications {
+        shade(MavenPublication) { pub ->
+            project.shadow.component(pub)
+            pom pomConfig
+            pom.withXml {
+                def dependenciesNode = asNode().dependencies[0]
+                project.configurations.compile.allDependencies.findAll {
+                    excludedDependencyGroups.contains(it.group)
+                }.each { dep ->
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', dep.group)
+                    dependencyNode.appendNode('artifactId', dep.name)
+                    dependencyNode.appendNode('version', dep.version)
+                    dependencyNode.appendNode('scope', 'compile')
+                }
+            }
+        }
+    }
+}
+
 shadowJar {
     classifier = ''
+    from generatePomFileForShadePublication {
+        rename('pom-default.xml',"META-INF/maven/${project.group}/${project.name}/pom.xml")
+    }
     def relocatePackage = 'org.opencypher.relocated'
     [
             'cats',
@@ -25,17 +58,16 @@ shadowJar {
     }
 
     dependencies {
-        exclude(dependency('org.scala-lang:'))
-        exclude(dependency('org.scala-lang.modules:'))
+        excludedDependencyGroups.each {
+            exclude(dependency("$it:"))
+        }
     }
     exclude "META-INF/versions/**/*"
     exclude "META-INF/services/**/*"
-    exclude "META-INF/NOTICE"
-    exclude "META-INF/LICENSE"
+    exclude "META-INF/NOTICE*"
+    exclude "META-INF/LICENSE*"
     exclude "utf8.json"
 }
 
-pub.dev.artifacts = ['shadowJar']
-pub.full.artifacts = ['shadowJar']
 
 assemble.dependsOn shadowJar
