--- a/morpheus-spark-cypher/build.gradle
+++ b/morpheus-spark-cypher/build.gradle
@@ -2,19 +2,31 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 description = 'Morpheus: Cypher for Apache Spark'
 
-dependencies {
-    if (project.hasProperty('testOkapiShade')) {
-        compile project(path: ':okapi-shade', configuration: 'shadow')
-        compile(project(':okapi-neo4j-io')) {
+if (project.hasProperty('testOkapiShade')) {
+    configurations {
+        compile {
             exclude(group: 'org.opencypher', module: 'okapi-api')
+            exclude(group: 'org.opencypher', module: 'okapi-ir')
+            exclude(group: 'org.opencypher', module: 'okapi-logical')
+            exclude(group: 'org.opencypher', module: 'okapi-relational')
+            exclude(group: 'org.opencypher', module: 'okapi-trees')
         }
-    } else {
-        compile project(':okapi-relational')
-        compile(project(':okapi-neo4j-io'))
     }
+    dependencies {
+        compile group: 'org.opencypher', name: 'okapi-shade', version: ver.self
+    }
+}
 
+dependencies {
+    compile project(':okapi-relational')
+    compile project(':okapi-neo4j-io')
     compile project(':graph-ddl')
 
+    compile(group: 'com.lihaoyi', name: "upickle".scala(), version: ver.upickle) {
+        exclude group: 'com.lihaoyi', module: 'utest'.scala()
+        exclude group: 'com.lihaoyi', module: 'acyclic'.scala()
+    }
+    compile group: 'org.typelevel', name: "cats-core".scala(), version: ver.cats
     compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: ver.neo4j.driver
 
     compileOnly group: 'org.apache.spark', name: "spark-core".scala(), version: ver.spark
