--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include(':okapi-relational')
 include(':okapi-tck')
 include(':okapi-trees')
 include(':okapi-shade')
+include(':okapi-shading-tool')
 include(':morpheus-spark-cypher')
 include(':morpheus-examples')
 include(':morpheus-tck')
